feat: redis 에 정렬된 id 전체를 cache 하도록 변경 - 라이브러리화 를 한다면 2 완